# UEPythonScripts

./: .gitignore  pyproject.toml
Animation/: SetAllAnimNotifyProperty.py
Assets/: ArchiveUnusedAssets.py  DeleteUnusedAssets.py  OrganizeAssetsPerType.py  PrefixAllAssets.py  ReportUnusedAssets.py  UnifyAllAssetsDuplicates.py  UnifyAssetDuplicates.py
Components/: AccessAndModifyComponentsNew.py  AccessAndModifyComponentsOld.py
Materials/: AssignMaterialToAllSimilarNamedMeshes.py  CreateInstancesOfSelectedMaterial.py  ReportTwoSidedMaterials.py
