[tool.poetry]
name = "uepythonscripts"
version = "0.1.0"
description = ""
authors = ["rdbreak <11014063+rdbreak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
unreal = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
